Lisää --enable-native-access JVM-parametri jPackage-buildeihin
Korjaa FlatLaf:n native access -varoitukset lisäämällä
--java-options '--enable-native-access=ALL-UNNAMED' parametri
sekä build-windows.bat että build-windows-installer.bat
skripteihin.

Varoitukset olivat harmiittomia, mutta nyt .exe-sovellus
käynnistyy ilman console-viestejä.